# haskell-minecraft-bot

./: .gitignore  LICENSE  README.md  haskell-minecraft-bot.cabal  package.json
src/: Main.hs
