name:                haskell-minecraft-bot
version:             0.1.0.0
synopsis:            Mineflayer bot written in haskell
description:         Please see README.md
homepage:            https://github.com/matthewfranglen/haskell-minecraft-bot
license:             AllRightsReserved
license-file:        LICENSE
author:              Matthew Franglen
maintainer:          matthew.franglen@gmail.com
copyright:           2016 Matthew Franglen
category:            Web
build-type:          Custom
extra-source-files:  src/*.hs
data-files:          haskell-minecraft-bot.cabal
cabal-version:       >=1.10

-- x-fay-packages:
x-fay-root-modules:  Main
x-fay-include-paths: src
x-fay-output-dir:    js
x-fay-source-dir:    src

executable haskell-minecraft-bot-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base, fay, fay-text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/matthewfranglen/haskell-minecraft-bot
